[Bugfix:Forum] Dark mode working properly for category filters

--- a/site/public/css/forum.css
+++ b/site/public/css/forum.css
@@ -702,6 +702,11 @@
     color: var(--actionable-blue);
 }
 
+[data-theme="dark"] .filter-inactive {
+    background: var(--btn-default-white);
+    color: var(--actionable-blue); 
+}
+
 .thread-resolved {
     color: var(--good-green);
     margin-right: 0;
